<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
       android:key="start_at_boot"
       android:title="@string/pref_boot"
       android:defaultValue="false"
       />

    <EditTextPreference
        android:key="listen_port"
        android:title="@string/pref_port"
        android:numeric="integer"
        android:defaultValue="8888" />

    <CheckBoxPreference
        android:key="http_authentication"
        android:title="@string/pref_http_auth"
        android:defaultValue="false"
        />

    <EditTextPreference
        android:key="http_user"
        android:title="@string/pref_http_user"
        android:dependency="http_authentication"
        android:defaultValue="myuser" />

    <EditTextPreference
        android:key="http_password"
        android:title="@string/pref_http_password"
        android:dependency="http_authentication"
        android:defaultValue="password" />
</PreferenceScreen>