<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/service_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_alignBaseline="@+id/button_toggleservice"
            android:layout_alignBottom="@+id/button_toggleservice"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="21dp"
            android:layout_marginStart="21dp" />

        <ToggleButton
            android:text="ToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_toggleservice"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp" />
    </LinearLayout>

    <TextView
        android:text="@string/app_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        />

    <ListView
        android:id="@+id/lv_app"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/add_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_add_app" />

</LinearLayout>